adding the new task form on lead.show with all attributes reminder, due date, assignees and tags
Former-commit-id: 56d174c15e7ac71d2a935b6385a62e05190eb082 [formerly 03c7b04de8affec8ca9f7546ea27cc8af339a678] [formerly 04a9d2a865a6900f399c5dc14bd80fb2c9a7fbdd [formerly 1a559231643dbabf4addd19928391e4b0b213c6a]]
Former-commit-id: e8c3409884465b8a28ec44e78d74612de91cb674 [formerly 56b42b953a3fa62c03fac787ca21178316c26745]
Former-commit-id: 135a96efd318c0d57ea057d54240f9aeb894efcb

--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -38,7 +38,7 @@
         </div>
       </div>
       <div class="col-md-2 col-xs-2">
-      <a href="/#/cases/new" class="btn red newAccountBtnOnscroll pull-right hidden afterScrollBtn">
+      <a href="/#/cases/new" class="hidden-xs hidden-sm  btn red newAccountBtnOnscroll pull-right hidden afterScrollBtn">
            New <span class="hidden-xs hiddenOnxs">Case</span>
          </a>
       </div>
