--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -39,7 +39,7 @@
       </div>
       </div>
       <div class="col-md-2 col-xs-2">
-      <a href="/#/accounts/new" class="btn red newAccountBtnOnscroll pull-right hidden afterScrollBtn">
+      <a href="/#/accounts/new" class="hidden-sm btn red newAccountBtnOnscroll pull-right hidden afterScrollBtn">
            New <span class="hidden-xs hiddenOnxs">Account</span>
          </a>
       </div>
