--- a/templates/activities/event_show.html
+++ b/templates/activities/event_show.html
@@ -123,7 +123,7 @@
                <i class="fa fa-calendar"></i>  <%=event.ends_at | date:'yyyy-MM-dd - HH:mm:ss '%></span>
                <div ng-show="showEndsCalendar" class="input-icon">
                      <i class="fa fa-calendar"></i>
-                     <input cusdatetimepicker data-model="event.ends_at" type="text" class="form-control" placeholder="From" value="" id="leadEventStartsAt">
+                     <input cusdatetimepicker close-on-selected=false data-model="event.ends_at" type="text" class="form-control" placeholder="From" value="" id="leadEventStartsAt">
                </div>
               </div>
               <div class="clearfix margin-bottom-15"></div>
