--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class=" subHeaderContent">
-      <div class="col-md-12">
+      <div class="col-md-9">
       <div class="row">
       <div class="col-md-10 col-xs-12 filter-content">
         <div class="filterOptions">
@@ -41,7 +41,7 @@
           </div>
       </div>
       <div class="col-md-2 col-xs-2">
-      <a href="/#/contacts/new" class="btn red newAccountBtnOnscroll pull-right hidden afterScrollBtn">
+      <a href="/#/contacts/new" class="hidden-sm hidden-xs btn red newAccountBtnOnscroll pull-right hidden afterScrollBtn">
            New <span class="hidden-xs hiddenOnxs">Contact</span>
          </a>
       </div>
