--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -864,52 +864,85 @@
   <div class="row">
     <div class="col-md-12">
       <div class="portlet showPage rightCardContent">
-            <div class="portlet-title line">
-              <div class="caption"> <i class="fa fa-check"></i>Tasks </div>
+                <div class="portlet-title line">
+                  <div class="caption"> <i class="fa fa-check"></i>Tasks </div>
 
-            </div>
-            <div class="newContactform portlet-body" id="chats">
-              <form class=" slimForm ng-pristine ng-invalid ng-invalid-required">
-                  <div class="formElements newTaskToLead" ng-show="newTaskform">
-                            <div class="row">
-                              <div class="col-md-12 margin-bottom-10">
-                                  <input ng-model="newTask.title" type="text" id="taskName" class="form-control" placeholder="Tilte">
-                              </div>
-                              <!--/span-->
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12 margin-bottom-10">
-                                      <datetimepick ng-model='newTask.due' placeholder="Add a due date" class="new-task-date" label-format='MMM d, h:mm a'></datetimepick>
+                </div>
+                <div class="newContactform portlet-body" id="chats">
+                  <form class=" slimForm ng-pristine ng-invalid ng-invalid-required">
+                      <div class="formElements newTaskToLead" ng-show="newTaskform">
+                                <div class="row">
+                                  <div class="col-md-12 margin-bottom-10">
+                                      <input ng-model="newTask.title" type="text" id="taskName" class="form-control" placeholder="Tilte">
+                                  </div>
+                                  <!--/span-->
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12 margin-bottom-10">
-                                      <datetimepick icon-class='fa fa-bell-o' ng-model='newTask.reminder' placeholder="Add a reminder" class="new-task-date" label-format='MMM d, h:mm a'></datetimepick>
+                                <div class="row">
+                                    <div class="col-md-12 margin-bottom-10">
+                                      <div class="input-icon ">
+                                        <i class="fa fa-calendar"></i>
+                                          <input cusdatetimepicker data-model="newTask.due" type="text" class="form-control" placeholder="Add a due date" value="" id="leadEventStartsAt">
+                                      </div>
+                                    </div>
                                 </div>
-                            </div>
-                  </div>
-                  <div class="row">
-                      <div class="col-md-12 margin-top-10">
-                          <p><span ng-hide="newTaskform">Add New Task</span><button type="button" ng-click="addTask(newTask)" class="btn blue btn-sm pull-right btn-inline">Add</button></p>
-
+                                <div class="row">
+                                    <div class="col-md-12 margin-bottom-10">
+                                        <div class="input-icon ">
+                                            <i class="fa fa-bell-o"></i>
+                                              <input cusdatetimepicker data-model="newTask.reminder" type="text" class="form-control" placeholder="Add a reminder" value="" id="leadEventStartsAt">
+                                          </div>                                         
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class='assigneeMemberToTask' >
+                                            <div class="input-icon ">
+                                              <i class="fa fa-user"></i>
+                                              <input type="text" ng-model="user" typeahead="user as user.google_display_name + ' <' + user.email + '>' for user in users | filter:$viewValue | limitTo:8" typeahead-on-select="selectMemberToTask()" class="form-control" placeholder="{{ _('Enter name or email addresse to add people to this group')}}">
+                                            </div>
+                                            <div id="assigeeList" class="list-group" ng-hide="selected_members == []">
+                                                <div ng-show="true" class="invitation list-group-item" ng-repeat="selected_us in selected_members">
+                                                    <button type="button" class="close" ng-click="unselectMember($index)" data-dismiss="alert"></button>
+                                                    <img class="google-avatar" src="<%= selected_us.google_public_profile_photo_url%>"/>
+                                                    <strong> <%= selected_us.google_display_name %></strong>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                      <div class="col-md-12">
+                                          <select id="select2_sample2" class="form-control select2" multiple>
+                                              <option ng-repeat="tag in tags"
+                                                      value='<%=tag.entityKey%>'>
+                                                  <%=tag.name%>
+                                              </option>
+                                          </select>
+                                      </div>
+                                 </div>
                       </div>
-                  </div>
-              </form>
-               <ul id="tasks" class="list-unstyled lead_related_tasks" ng-hide="newTaskform">
-                  <li ng-repeat="task in tasks" id="task_<%=$index%>">
-                    <input value="check1" type="checkbox">
-                    <span>
-                      <a href="/#/tasks/show/<%=task.id%>" class="discussion-content">
-                        <%= task.title%>
-                      </a>
-                      <span ng-show="task.due">
-                        [before: <%= task.due | date:'yyyy-MM-dd '%>]
-                      </span>
-                    </span>
-                  </li>
-              </ul>
-            </div>
-          </div>
+                      <div class="row">
+                          <div class="col-md-12 margin-top-10">
+                              <p><span ng-hide="newTaskform">Add New Task</span><button type="button" ng-click="addTask(newTask)" class="btn blue btn-sm pull-right btn-inline">Add</button></p>
+
+                          </div>
+                      </div>
+                  </form>
+                   <ul id="tasks" class="list-unstyled lead_related_tasks" ng-hide="newTaskform">
+                      <li ng-repeat="task in tasks" id="task_<%=$index%>">
+                        <input value="check1" type="checkbox">
+                        <span>
+                          <a href="/#/tasks/show/<%=task.id%>" class="discussion-content">
+                            <%= task.title%>
+                          </a>
+                          <span ng-show="task.due">
+                            [before: <%= task.due | date:'yyyy-MM-dd '%>]
+                          </span>
+                        </span>
+                      </li>
+                  </ul>
+                </div>
+              </div>
     </div>
   </div>
   <!-- $ Events -->
@@ -1906,6 +1939,10 @@
               defaultContainerWidth: 840,
               autoresize: true
           });
+  $("#select2_sample2").select2({
+                          placeholder: "Click to Select a label",
+                          allowClear: false
+                      });
 
 
 </script>
