--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -1037,7 +1037,7 @@
                         <div class="form-group">
                             <label  class="col-md-3 control-label">{{_("Country")}} </label>
                             <div class="col-md-9">
-                                <input type="text"  class="form-control" id="id_country" ng-model="address.country">
+                                <input type="text"  class="form-control" id="id_country" placeholder="Required" ng-model="address.country">
                             </div>
                         </div>
                 </div>
