Patch tittle Event, # 709 , Patch events in google calendar ,# 687
Former-commit-id: e783d8468bfb9e2db8383ea6695f6bc96288e0ff [formerly 709ea7b09974ad300b30b55d09b81f71aec88c80] [formerly 5070d91c0ff8f40bb29fd2f25aa778efa90e5a40 [formerly ccd75f704da5f2472b7ee091f65420889b7eb90f]]
Former-commit-id: 3166127d12171320e61641f59ce74112b55b90b5 [formerly 92689b240c203afd119fcb78f53d4432fbdfc515]
Former-commit-id: abc14d4f6f7c86ea835c48c3bb3c2b58e45bb220

--- a/templates/activities/event_show.html
+++ b/templates/activities/event_show.html
@@ -51,7 +51,7 @@
       <div class="col-md-12 showPage taskShowHead margin-bottom-15">
           <div class="row">
             <div class="col-md-12">
-                    <span editable-text="event.title" ng-model="event.title" onbeforesave="inlineUpdateEvent()" class="documentTitle" >
+                    <span editable-text="event.title" ng-model="event.title" onbeforesave="inlineUpdateEvent(event,$data)" class="documentTitle" >
                         <%= event.title%>
                     </span>
                     <span class="page-meta pull-right">
