--- a/templates/calendar/calendar_show.html
+++ b/templates/calendar/calendar_show.html
@@ -769,7 +769,7 @@
                       <!--HKA 19.11.2013  End Case Modal -->
 
 <!--Event Modal -->
-          <div id="newEventModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div id="newEventModal" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
             <div class="modal-header">
@@ -784,11 +784,11 @@
                                                 <div class="row">
                                                   <div class="col-md-6">
                                                     <p> <strong>{{_("Starts")}}</strong>: <%=start_event_draw | date:'MMMM dd, yyyy, HH:mm'%></p>
-                                                        
+
                                                   </div>
                                                   <div class="col-md-6">
                                                   <p><strong>{{_("Ends")}}</strong>: <%=end_event_draw | date:'MMMM dd, yyyy, HH:mm'%></p>
-                                                        
+
                                                   </div>
                                                 </div>
                                                     <input class="form-control" autofocus="" type="text" placeholder="{{_('Where?')}}" id="taskTitle" ng-model="ioevent.where">
