Delete events from google calendar, # 701
Former-commit-id: d519fe102f64a207f4af723e38d36cfc46548516 [formerly fcf04516db73c3b5f8d2d0fc7f28349231a8471f] [formerly c781952506b44f0385dec6d0ae7cc76c5d5997cc [formerly 52ec5795f96b52641c243013792f72c5ecfc0908]]
Former-commit-id: 1b072489ae7a747a594301068f8a6fc02f962bd2 [formerly de50f1ba3477fce4d12a53c944b12fdc6e01f188]
Former-commit-id: dd28458eb0ec93627fa3ae7a557bad00cd659e6d

--- a/templates/calendar/calendar_show.html
+++ b/templates/calendar/calendar_show.html
@@ -769,7 +769,7 @@
                       <!--HKA 19.11.2013  End Case Modal -->
 
 <!--Event Modal -->
-          <div id="newEventModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div id="newEventModal" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
             <div class="modal-header">
