document sharing on accounts,opportunities and cases
Former-commit-id: 3b23ead0db85b74e9cdc4771aee08ab6fbfee399 [formerly be84073c00da9bc2788752fdc84ff4a6b29be9c9] [formerly 5e4c2d7920bee2217071bdb3fe160675aeca9525 [formerly bb3b1b4041fb0dace524e8a4f1e6c1ece8eef3ac]]
Former-commit-id: 8b3e97952a5e70e779f18f244fe5885702a1c94d [formerly adefc78f62d3817fbb01476e89691910ebbff80b]
Former-commit-id: 625ecdddafcede74095d237a0782fd7d50ca53cf

--- a/templates/base.html
+++ b/templates/base.html
@@ -108,7 +108,7 @@
               </li>
 
               <li class="dropdown user">
-                <a href="/#/admin/users" class="dropdown-tog" target="new">
+                <a href="/#/admin/users" class="dropdown-tog">
                   <span class="username">
                     Invite Users
                   </span>
