--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -741,7 +741,51 @@
                   <div class="caption"> <i class="fa fa-calendar"></i>Events </div>
 
                 </div>
-                <div class="newContactform portlet-body" id="chats">
+                <div class="newContactform portlet-body" id="chats">                  
+                   <ul id="tasks" class="list-unstyled lead_related_events" ng-hide="newEventform">
+                      <li ng-repeat="event in events" id="event_<%=$index%>" class="relatedEventItem" ng-mouseenter="showDeleteBtn = true" ng-mouseleave="showDeleteBtn = false">
+                        <div class="event-container">
+                          <div class="showDescription">
+                            <span class="relatedEventTitle">
+                              <a href="/#/events/show/<%=event.id%>" class="">
+                                <%= event.title%>
+                              </a>
+                            </span>
+                            <a class="pull-right relatedEventMoreBtn">
+                              <i class="fa fa-chevron-right" ng-hide="showDetails" ng-click="showDetails=true"></i>
+                              <i class="fa fa-chevron-down" ng-show="showDetails" ng-click="showDetails=false"></i>
+                            </a>
+                            <a class="pull-left relatedEventDeleteBtn" ng-show="showDeleteBtn" ng-click="deleteEvent(event)">
+                              <i class="fa fa fa-times-circle"></i>
+                            </a>
+                            <span class="relatedEventStartsAt pull-right" ng-hide="showDetails" ng-show="event.starts_at" title="<%= event.starts_at | date:'yyyy-MM-dd '%>">
+                                  <%= event.starts_at | date:'dd MMM'%>
+                            </span>
+                          </div>  
+                          <div class="moreDetails row" ng-show="showDetails">
+                            <div class="col-md-5 col-xs-5 event-schedule">
+                                <span class=""><i class="fa fa-calendar"></i>
+                                <%= event.starts_at | date:'dd MMM'%> </span>
+                            </div>
+                            <div class="col-md-2 col-xs-2 event-schedule">
+                                <i class="fa fa-chevron-right"></i>
+                            </div>
+                            <div class="col-md-5 col-xs-5 event-schedule">
+                               <span class="">
+                                  <i class="fa fa-calendar"></i> 
+                                  <%= event.ends_at | date:'dd MMM'%>
+                                </span>
+                            </div>
+                            <div class="col-md-12">
+                               <span class="">
+                                  <i class="fa fa-map-marker"></i> 
+                                  <%= event.where %>
+                                </span>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                  </ul>
                   <form class=" slimForm ng-pristine ng-invalid ng-invalid-required">
                   <div class="formElements newEventToLead" ng-show="newEventform">
                             <div class="row">
@@ -776,23 +820,13 @@
                   </div>
                   <div class="row">
                       <div class="col-md-12 margin-top-10">
-                          <p><span ng-hide="newEventform">Add New Event</span><button type="button" ng-click="addEvent(ioevent)" class="btn red btn-sm pull-right btn-inline">Add</button></p>
+                          <p class="newEventText"><span ng-hide="newEventform">Add New Event</span>
+                          <button type="button" ng-click="addEvent(ioevent)" class="btn red btn-sm pull-right btn-inline">Add</button>
+                          <button type="button" ng-click="closeEventForm(ioevent)" ng-show="newEventform" class="cancelEventBtn btn btn-default btn-sm pull-right btn-inline">Cancel</button>
+                          </p>
                       </div>
                   </div>
               </form>
-                   <ul id="tasks" class="list-unstyled lead_related_events" ng-hide="newEventform">
-                      <li ng-repeat="event in events" id="event_<%=$index%>">
-                        <input value="check1" type="checkbox">
-                        <span>
-                          <a href="/#/events/show/<%=event.id%>" class="discussion-content">
-                            <%= event.title%>
-                            <span ng-show="event.starts_at">
-                              [<%= event.starts_at | date:'yyyy-MM-dd '%>]
-                            </span>
-                          </a>
-                        </span>
-                      </li>
-                  </ul>
                 </div>
               </div>
         </div>
@@ -1688,5 +1722,8 @@
                           placeholder: "Click to Select a label",
                           allowClear: false
                       });
+                    $('.lead_related_events').slimScroll({
+                                    height: '160px'
+                                });
 
                 </script>
