--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -50,7 +50,7 @@
       </div>
       </div>
       <div class="col-md-2 col-xs-2">
-      <a href="/#/opportunities/new" class="btn red newAccountBtnOnscroll pull-right hidden afterScrollBtn">
+      <a href="/#/opportunities/new" class="hidden-xs hidden-sm btn red newAccountBtnOnscroll pull-right hidden afterScrollBtn">
            New <span class="hidden-xs hiddenOnxs">Opportunity</span>
          </a>
       </div>
