hide install chrome extension button on other browsers
Former-commit-id: 0f0474bc8ce35f9dade78589ae7b6303530ab54c [formerly 8b2adfcafc40205a99bae964b0198111dd02d62a] [formerly dff012dfbf2afb6afcc28243593338746783b4d0 [formerly 2ba2a91b0f90f8c6d717bd59bc005b61d94dbcf2]]
Former-commit-id: abfd410a03f2e21a0c0dc6b7e2679003850c233a [formerly 6492fc345716813ff0e4ce09fbf158dc997fc29e]
Former-commit-id: 7747d99e173db04a9130dd3f343f6d806530f6bd

--- a/templates/base.html
+++ b/templates/base.html
@@ -101,9 +101,9 @@
         <!-- END RESPONSIVE MENU TOGGLER -->
         <!-- BEGIN TOP NAVIGATION MENU -->
 
-        <ul class="nav navbar-nav pull-right">
+        <ul class="nav navbar-nav pull-right" ng-controller="NavBarController">
 
-              <li class="dropdown user chrome-ext hidden-xs">
+              <li id="chromeExtension" class="dropdown user chrome-ext hidden-xs"  >
 	                <input type="submit" onclick="$('#InstallChromeExtension').modal() " class="btn blue btn-block pull-right" value="Install chrome extension" style="padding-left:5px;padding-right:5px;">
               </li>
 
@@ -431,6 +431,7 @@
           window.location.replace('{{active_app.url}}');
       };
     }
+
   </script>
 
   <script src="https://apis.google.com/js/client.js?onload=loadGapi">
