adding start a hangout button on lead and contact pages
Former-commit-id: 199c6e0cf8669fe42c38f327a8ce41f7af94eb8a [formerly 433f529f7fe5dcfe69067f95ee29a248be53990d] [formerly 9acc0ed03c98a7d2830bb74285795a5e2469ed2c [formerly b386ecd39cfc0692d2a7afeb9850af4af52078b0]]
Former-commit-id: 674a7a8cf997112f15ec761c77b334e164445dcc [formerly 24863805c586e141ecf7b61bffa979b4c36a080d]
Former-commit-id: 55d77d79bf4c5a2f615d205a6c533cd7c37cc694

--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -97,12 +97,17 @@
                         </a>
                       </span>
                     </li>
+                    <li>
+                        <br>
+                        <div id="placeholder-div1" class="pull-right hangout-btn"></div>
+                        <br>
+                    </li>
                   </ul>
-                  <hr class="sm-hr">
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12">
+                  <hr class="sm-hr">
                   <div class="tags-section hidden" ng-class="{hidden: contact.tags==null}">
                     <div class="section-content">
                       <span class="pull-left">Tags: </span>
